--- a/app.css
+++ b/app.css
@@ -1,14 +1,61 @@
 
 body {
-
 margin: 0%;
 padding: 0%;
+}
 
+
+.container{
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    height: 90vh;
+}
+
+
+.row {
+    border: 2px solid brown;
+    height: 33.3%;
+    background: aqua;
+  
+}
+
+.row:nth-child(1){
+
+border-radius: 10px 10px 0px 0px;
+
+}
+
+.row:nth-child(2){
+
+border-radius: 0%;
+
+}
+
+.row:nth-child(3){
+
+    border-radius: 0px 0px 10px 10px;
+    
+    }
+
+.flex {
+
+display: flex;
+
+}
+
+.title{
+
+height: 80%;
+width: 70%;
+background-color: red;
+
+}
+
+.flexCenter{
+display: flex;
+justify-content: center;
+align-items: center;
 
 }
 
 
-
-
-
-.row {border: 1px 1px solid red;}
