--- a/app.css
+++ b/app.css
@@ -13,9 +13,9 @@ padding: 0%;
 
 
 .row {
-    border: 2px solid brown;
+    border: 2px solid orange;
     height: 33.3%;
-    background: aqua;
+    background: #7c57c2;
   
 }
 
@@ -47,7 +47,7 @@ display: flex;
 
 height: 80%;
 width: 80%;
-border: 2px solid red;
+border: 2px solid orange;
 font-size: 48px;
 font-family: 'Alegreya';
 border-radius: 10px 10px 0px 0px;
