--- a/app.css
+++ b/app.css
@@ -52,6 +52,7 @@ font-size: 48px;
 font-family: 'Alegreya';
 border-radius: 10px 10px 0px 0px;
 border-bottom: transparent;
+text-shadow: 1px 1px 1px #f1ff5c;
 }
 
 
@@ -91,6 +92,7 @@ color: #ffa260;
 border: 2px solid;
 padding: 1em 2em;
 font-size: 1em;
+border-radius: 10px;
 
 
 
@@ -104,4 +106,5 @@ font-size: 1em;
     transform: translateY(-0.35em);
     transition: transform .15s, box-shadow .15s;
     cursor: pointer;
+    border-radius: 5px;
 }
