Selecting elements in JS and testing inserting images on button press

--- a/app.css
+++ b/app.css
@@ -73,12 +73,12 @@ width: 100%;
 
 .godSelection{
 
-height: 125px;
-width: 125px;
-background: white;
+height: 128px;
+width: 128px;
+background-image: url(/images/achilles.jpg) no-repeat;
 box-shadow: 0 0 0 8px #632c63, 0 0 0 12px #a769a7, 0 0 0 16px #c380c3, 0 0 0 20px #640064;
 border-radius: 10px;
-
+position:relative;
 
 
 }
