--- a/app.css
+++ b/app.css
@@ -108,3 +108,9 @@ border-radius: 10px;
     cursor: pointer;
     border-radius: 5px;
 }
+
+@media only screen and (min-width: 300px) {
+    .title {
+        font-size: 24px;
+    }
+}
