--- a/app.css
+++ b/app.css
@@ -49,7 +49,7 @@ height: 80%;
 width: 80%;
 border: 2px solid orange;
 font-size: 48px;
-font-family: 'Alegreya';
+font-family: 'Mansalva';
 border-radius: 10px 10px 0px 0px;
 border-bottom: transparent;
 text-shadow: 1px 1px 1px #f1ff5c;
@@ -88,15 +88,26 @@ position:relative;
 
 
 background: none;
-color: #ffa260;
-border: 2px solid;
+/* color: #ffa260; */
+color: black;
+border: 2px solid #ffa260;
 padding: 1em 2em;
 font-size: 1em;
 border-radius: 10px;
-
-
-
+font-family: 'Mansalva';
 }
+/* button:target {
+    background: none;
+/* color: #ffa260; */
+/* color: black;
+border: 2px solid #ffa260;
+padding: 1em 2em;
+font-size: 1em;
+border-radius: 10px;
+font-family: 'Mansalva'; */
+/* } */ 
+
+
 
 .buttonStyle:hover{
 
@@ -111,6 +122,7 @@ border-radius: 10px;
 
 @media only screen and (min-width: 300px) {
     .title {
-        font-size: 24px;
+        font-size: 44px;
+        padding: 8px;
     }
 }
